<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E2E"
    tools:context=".modules.login.view.LoginFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/sen_bold"
        android:text="@string/login_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sen"
        android:text="@string/text_two_login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/whiteCard"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginBottom="-24dp"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="327dp"
                android:layout_height="62dp"
                android:layout_marginTop="29dp"
                android:background="@drawable/button_background"
                android:hapticFeedbackEnabled="false"
                android:text="@string/login_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.392"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/remeberBox" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditLayout"
                android:layout_width="@dimen/card_width"
                android:layout_height="62dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/email_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sen"
                android:text="@string/email_text"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditLayout"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sen"
                android:text="@string/password_text"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/emailEditLayout"
                app:layout_constraintTop_toBottomOf="@+id/emailEditLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditLayout"
                android:layout_width="@dimen/card_width"
                android:layout_height="62dp"
                android:layout_marginTop="8dp"
                android:hint="******"
                app:layout_constraintStart_toStartOf="@+id/passwordText"
                app:layout_constraintTop_toBottomOf="@+id/passwordText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/remeberBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/sen"
                android:text="@string/remember_check"
                app:layout_constraintStart_toStartOf="@+id/passwordEditLayout"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditLayout" />

            <TextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen"
                android:shadowColor="#FF7622"
                android:text="@string/forgot_text"
                android:textColor="#FF7622"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/remeberBox"
                app:layout_constraintEnd_toEndOf="@+id/passwordEditLayout"
                app:layout_constraintTop_toTopOf="@+id/remeberBox" />

            <TextView
                android:id="@+id/tvDontHaveAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/sen"
                android:text="@string/no_accout_text"
                app:layout_constraintStart_toStartOf="@+id/btnLogin"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sen"
                android:text="@string/signup_text1"
                android:textColor="#F44336"
                app:layout_constraintEnd_toEndOf="@+id/btnLogin"
                app:layout_constraintStart_toEndOf="@+id/tvDontHaveAcc"
                app:layout_constraintTop_toTopOf="@+id/tvDontHaveAcc" />

            <TextView
                android:id="@+id/tvOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/or_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDontHaveAcc" />

            <ImageView
                android:id="@+id/googleLoginImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/googlelogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOr" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>